strutucher the codess

--- a/resume.html
+++ b/resume.html
@@ -6,342 +6,7 @@
     <title>Resume - John Doe</title>
     <meta name="description" content="Professional resume - Full Stack Developer & Software Engineer">
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
-    
-    <style>
-        :root {
-            --bg: #ffffff;
-            --text: #000000;
-            --text-muted: #666666;
-            --text-light: #888888;
-            --border: #e0e0e0;
-            --primary: #0066cc;
-            --font-sans: 'Inter var', 'Inter', system-ui, sans-serif;
-        }
-
-        [data-theme="dark"] {
-            --bg: #0a0a0a;
-            --text: #ffffff;
-            --text-muted: #cccccc;
-            --text-light: #999999;
-            --border: #333333;
-            --primary: #4da6ff;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: var(--font-sans);
-            font-size: 14px;
-            line-height: 1.5;
-            color: var(--text);
-            background: var(--bg);
-            padding: 40px 20px;
-        }
-
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            position: relative;
-        }
-
-        .header-controls {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            z-index: 100;
-            display: flex;
-            gap: 10px;
-        }
-
-        .control-btn {
-            background: var(--bg);
-            border: 1px solid var(--border);
-            border-radius: 6px;
-            padding: 8px 12px;
-            cursor: pointer;
-            color: var(--text-muted);
-            text-decoration: none;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-            font-size: 12px;
-            display: flex;
-            align-items: center;
-            gap: 5px;
-        }
-
-        .control-btn:hover {
-            color: var(--text);
-            background: var(--border);
-        }
-
-        .resume-header {
-            text-align: center;
-            margin-bottom: 30px;
-            border-bottom: 2px solid var(--border);
-            padding-bottom: 20px;
-        }
-
-        .name {
-            font-size: 32px;
-            font-weight: 700;
-            color: var(--text);
-            margin-bottom: 8px;
-        }
-
-        .title {
-            font-size: 16px;
-            color: var(--primary);
-            margin-bottom: 15px;
-            font-weight: 500;
-        }
-
-        .contact-info {
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            gap: 20px;
-            font-size: 13px;
-            color: var(--text-muted);
-        }
-
-        .contact-info a {
-            color: var(--primary);
-            text-decoration: none;
-        }
-
-        .contact-info a:hover {
-            text-decoration: underline;
-        }
-
-        .summary {
-            text-align: center;
-            margin: 25px 0;
-            padding: 20px;
-            background: rgba(0, 102, 204, 0.05);
-            border-radius: 8px;
-            border-left: 4px solid var(--primary);
-        }
-
-        .summary p {
-            color: var(--text-muted);
-            font-size: 14px;
-            line-height: 1.6;
-            max-width: 600px;
-            margin: 0 auto;
-        }
-
-        .section {
-            margin-bottom: 30px;
-        }
-
-        .section-title {
-            font-size: 18px;
-            font-weight: 700;
-            color: var(--text);
-            margin-bottom: 15px;
-            padding-bottom: 8px;
-            border-bottom: 2px solid var(--primary);
-            position: relative;
-        }
-
-        .section-title::after {
-            content: '';
-            position: absolute;
-            bottom: -2px;
-            left: 0;
-            width: 40px;
-            height: 2px;
-            background: var(--primary);
-        }
-
-        .item {
-            margin-bottom: 20px;
-            padding: 15px 0;
-            border-bottom: 1px solid var(--border);
-        }
-
-        .item:last-child {
-            border-bottom: none;
-        }
-
-        .item-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: flex-start;
-            margin-bottom: 8px;
-            flex-wrap: wrap;
-            gap: 10px;
-        }
-
-        .item-title {
-            font-weight: 600;
-            color: var(--text);
-            font-size: 15px;
-        }
-
-        .item-company {
-            color: var(--primary);
-            font-size: 14px;
-            font-weight: 500;
-        }
-
-        .item-location {
-            color: var(--text-light);
-            font-size: 13px;
-            font-style: italic;
-        }
-
-        .item-duration {
-            color: var(--text-light);
-            font-size: 13px;
-            background: var(--border);
-            padding: 4px 8px;
-            border-radius: 12px;
-            white-space: nowrap;
-        }
-
-        .item-description {
-            margin-top: 10px;
-        }
-
-        .item-description ul {
-            margin-left: 20px;
-        }
-
-        .item-description li {
-            margin-bottom: 6px;
-            color: var(--text-muted);
-            font-size: 13px;
-            line-height: 1.5;
-        }
-
-        .skills-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-        }
-
-        .skill-category {
-            background: rgba(0, 102, 204, 0.05);
-            padding: 15px;
-            border-radius: 8px;
-            border-left: 3px solid var(--primary);
-        }
-
-        .skill-category-title {
-            font-weight: 600;
-            color: var(--text);
-            font-size: 14px;
-            margin-bottom: 8px;
-        }
-
-        .skill-list {
-            color: var(--text-muted);
-            font-size: 13px;
-            line-height: 1.6;
-        }
-
-        .project-item {
-            background: rgba(0, 102, 204, 0.02);
-            padding: 15px;
-            border-radius: 8px;
-            border: 1px solid var(--border);
-            margin-bottom: 15px;
-        }
-
-        .project-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 8px;
-            flex-wrap: wrap;
-        }
-
-        .project-title {
-            font-weight: 600;
-            color: var(--text);
-            font-size: 15px;
-        }
-
-        .project-year {
-            color: var(--text-light);
-            font-size: 13px;
-            background: var(--border);
-            padding: 2px 8px;
-            border-radius: 10px;
-        }
-
-        .project-description {
-            color: var(--text-muted);
-            font-size: 13px;
-            line-height: 1.5;
-        }
-
-        .project-tech {
-            margin-top: 8px;
-            display: flex;
-            flex-wrap: wrap;
-            gap: 6px;
-        }
-
-        .tech-tag {
-            background: var(--primary);
-            color: white;
-            padding: 2px 8px;
-            border-radius: 12px;
-            font-size: 11px;
-            font-weight: 500;
-        }
-
-        .achievement-list {
-            margin-left: 20px;
-        }
-
-        .achievement-list li {
-            color: var(--text-muted);
-            font-size: 13px;
-            margin-bottom: 8px;
-            line-height: 1.5;
-        }
-
-        .download-btn {
-            text-align: center;
-            margin: 30px 0;
-        }
-
-        .download-btn button {
-            background: var(--primary);
-            color: white;
-            border: none;
-            padding: 12px 24px;
-            border-radius: 6px;
-            font-size: 14px;
-            cursor: pointer;
-            font-weight: 500;
-        }
-
-        .download-btn button:hover {
-            background: #0052a3;
-        }
-
-        @media print {
-            body { padding: 0; font-size: 12px; }
-            .header-controls { display: none; }
-        }
-
-        @media (max-width: 768px) {
-            body { padding: 20px 15px; }
-            .header-controls { position: static; justify-content: center; margin-bottom: 20px; }
-            .contact-info { flex-direction: column; gap: 10px; }
-            .item-header, .project-header { flex-direction: column; align-items: flex-start; }
-            .item-duration, .project-year { margin-top: 5px; }
-            .skills-grid { grid-template-columns: 1fr; }
-            .name { font-size: 28px; }
-        }
-    </style>
+    <link rel="stylesheet" href="./css/resume.css">   
 </head>
 <body>
     <div class="header-controls">
@@ -550,33 +215,7 @@
             <button onclick="window.print()">📄 Download PDF Resume</button>
         </div>
     </div>
-
-    <script>
-        class ResumeTheme {
-            constructor() {
-                this.currentTheme = localStorage.getItem('resume-theme') || 
-                    (window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light');
-                this.init();
-            }
-
-            init() {
-                this.applyTheme();
-                document.getElementById('theme-toggle').addEventListener('click', () => this.toggleTheme());
-            }
-
-            toggleTheme() {
-                this.currentTheme = this.currentTheme === 'light' ? 'dark' : 'light';
-                this.applyTheme();
-                localStorage.setItem('resume-theme', this.currentTheme);
-            }
-
-            applyTheme() {
-                document.documentElement.setAttribute('data-theme', this.currentTheme);
-                document.getElementById('theme-toggle').innerHTML = this.currentTheme === 'light' ? '🌙 Theme' : '☀️ Theme';
-            }
-        }
-
-        document.addEventListener('DOMContentLoaded', () => new ResumeTheme());
-    </script>
+    <script src="./js/resume.js"></script>
+   
 </body>
 </html>
