added social toml changes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="js/dashboard-config.js"></script>
     
     <!-- Social Configuration -->
-    <script src="js/social-config.js"></script>
+    <script src="js/social-config-toml.js"></script>
     
     <!-- Markdown parser -->
     <script src="https://cdn.jsdelivr.net/npm/marked@9.1.2/marked.min.js"></script>
