--- a/about.html
+++ b/about.html
@@ -74,8 +74,7 @@
       <header class="page-header">
         <h1 class="page-title">About</h1>
         <p class="page-subtitle">
-          Learn more about my background, skills, and approach to development
-          and design.
+          Discover my journey, passion for technology, and the creative process behind building exceptional digital experiences.
         </p>
       </header>
 
