--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About - Your Name</title>
+    <title>About - Nishikanta Ray</title>
     <meta
       name="description"
       content="About me - Developer, Designer, Creator" />
@@ -86,7 +86,7 @@
     <!-- Footer -->
     <footer class="footer">
       <p>
-        &copy; 2024 Your Name. Built with
+        &copy; 2024 Nishikanta Ray. Built with
         <a href="https://github.com/markedjs/marked" target="_blank"
           >Marked.js</a
         >.
