--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name</title>
+    <title>Nishikanta Ray</title>
     <meta name="description" content="Personal portfolio - Developer, Designer, Creator">
     
     <!-- Fonts -->
@@ -69,7 +69,7 @@
     <main class="main">
         <!-- Hero Section -->
         <section id="home" class="hero">
-            <h1 class="hero-title">Your Name</h1>
+            <h1 class="hero-title">Nishikanta Ray</h1>
             <div class="hero-intro">
                 <p>I work on web development, user experience design, and modern frontend technologies among other digital things.</p>
                 <p>This website is an archive of my work and thoughts. Currently, I'm into React, TypeScript, and building <a href="projects.html">modern web applications</a>. If you fancy a longer introduction, try the <a href="about.html">about</a> page, or check out my <a href="blog.html">blog</a> for recent thoughts and insights.</p>
@@ -228,7 +228,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <p>&copy; 2024 Your Name. Built with <a href="https://github.com/markedjs/marked" target="_blank">Marked.js</a>.</p>
+        <p>&copy; 2024 Nishikanta Ray. Built with <a href="https://github.com/markedjs/marked" target="_blank">Marked.js</a>.</p>
     </footer>
     <script src="./js/home.js"></script>
 </body>
