--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects - Your Name</title>
+    <title>Projects - Nishikanta Ray</title>
     <meta name="description" content="My projects - Developer, Designer, Creator">
     <link rel="stylesheet" href="./css/projects.css">
     <link rel="stylesheet" href="./css/projects-config-override.css">
@@ -128,7 +128,7 @@
 
     <!-- Footer -->
     <footer class="footer" data-section="footer">
-        <p>&copy; 2024 Your Name. Built with <a href="https://github.com/markedjs/marked" target="_blank">Marked.js</a>.</p>
+        <p>&copy; 2024 Nishikanta Ray. Built with <a href="https://github.com/markedjs/marked" target="_blank">Marked.js</a>.</p>
     </footer>
 
     <!-- Projects Configuration -->
