--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - Your Name</title>
+    <title>Contact - Nishikanta Ray</title>
     <meta name="description" content="Contact me - Developer, Designer, Creator">
     
     <!-- Fonts -->
@@ -70,7 +70,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <p>&copy; 2024 Your Name. Built with <a href="https://github.com/markedjs/marked" target="_blank">Marked.js</a>.</p>
+        <p>&copy; 2024 Nishikanta Ray. Built with <a href="https://github.com/markedjs/marked" target="_blank">Marked.js</a>.</p>
     </footer>
     <script src="./js/contact.js"></script>
 </body>
