--- a/projects.html
+++ b/projects.html
@@ -132,6 +132,7 @@
     </footer>
 
     <!-- Projects Configuration -->
+    <script src="js/toml-loader.js"></script>
     <script src="js/projects-config-toml.js"></script>
     
     <!-- Project Analytics Configuration -->
