--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
     <main class="main">
         <!-- Hero Section -->
         <section id="home" class="hero">
+            <div class="hero-profile-image">
+                <img src="https://ui-avatars.com/api/?name=Your+Name&size=240&background=0D8ABC&color=fff" alt="Nishikanta Ray" class="profile-img">
+            </div>
             <h1 class="hero-title">Nishikanta Ray</h1>
             <div class="hero-intro">
                 <p>A passionate Full Stack Developer, explorer, and freelancer with 2+ years of experience in designing, developing, and delivering innovative web solutions.</p>
