--- a/about.html
+++ b/about.html
@@ -86,12 +86,15 @@
     <!-- Footer -->
     <footer class="footer">
       <p>
-        &copy; 2024 Nishikanta Ray. Built with
-        <a href="https://github.com/markedjs/marked" target="_blank"
-          >Marked.js</a
-        >.
+        &copy; <span id="footer-year"></span> Your Name. Built with
+        <a href="https://renderer.nishikanta.in/" target="_blank" rel="noopener noreferrer"
+          >Renderer</a
+        > ❤️
       </p>
     </footer>
+    <script>
+      document.getElementById('footer-year').textContent = new Date().getFullYear();
+    </script>
     <script src="./js/about.js"></script>
   </body>
 </html>
