--- a/blog.html
+++ b/blog.html
@@ -57,11 +57,15 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <p>&copy; 2024 Personal Portfolio. Built with <a href="https://github.com/markedjs/marked" target="_blank">Marked.js</a>.</p>
+        <p>&copy; <span id="footer-year"></span> Your Name. Built with <a href="https://renderer.nishikanta.in/" target="_blank" rel="noopener noreferrer">Renderer</a> ❤️</p>
     </footer>
 
     <!-- Marked.js for Markdown parsing -->
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    
+    <script>
+        document.getElementById('footer-year').textContent = new Date().getFullYear();
+    </script>
     
     <!-- Blog Configuration -->
     <script src="js/blog-config.js"></script>
