--- a/contact.html
+++ b/contact.html
@@ -69,9 +69,14 @@
     </main>
 
     <!-- Footer -->
+        <!-- Footer -->
     <footer class="footer">
-        <p>&copy; 2024 Nishikanta Ray. Built with <a href="https://github.com/markedjs/marked" target="_blank">Marked.js</a>.</p>
+        <p>&copy; <span id="footer-year"></span> Your Name. Built with <a href="https://renderer.nishikanta.in/" target="_blank" rel="noopener noreferrer">Renderer</a> ❤️</p>
     </footer>
+    
+    <script>
+        document.getElementById('footer-year').textContent = new Date().getFullYear();
+    </script>
     <script src="./js/contact.js"></script>
 </body>
 </html>
