--- a/projects.html
+++ b/projects.html
@@ -127,9 +127,16 @@
     </main>
 
     <!-- Footer -->
-    <footer class="footer" data-section="footer">
-        <p>&copy; 2024 Nishikanta Ray. Built with <a href="https://github.com/markedjs/marked" target="_blank">Marked.js</a>.</p>
+        <!-- Footer -->
+    <footer class="footer">
+        <p>&copy; <span id="footer-year"></span> Your Name. Built with <a href="https://renderer.nishikanta.in/" target="_blank" rel="noopener noreferrer">Renderer</a> ❤️</p>
     </footer>
+
+    <script>
+        document.getElementById('footer-year').textContent = new Date().getFullYear();
+    </script>
+
+    <!-- Load TOML Loader -->
 
     <!-- Projects Configuration -->
     <script src="js/toml-loader.js"></script>
