--- a/docs.html
+++ b/docs.html
@@ -1729,6 +1729,9 @@
                     <a href="#v2-features" class="nav-item" data-section="v2-features">
                         <span class="nav-icon">✨</span>v2.0 Features
                     </a>
+                    <a href="#v21-features" class="nav-item" data-section="v21-features">
+                        <span class="nav-icon">🎉</span>v2.1 Features
+                    </a>
                 </div>
 
                 <div class="nav-group">
